Changelog
=========

CURRENT (in CVS)
- Added option to select if repeat button events should be sent



v.0.3.0 
- First public release
- Official device id is now 53
- New option to select if button up events should be sent