@@ -49,8 +49,8 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 0,3,0,26
- PRODUCTVERSION 0,3,0,26
+ FILEVERSION 0,3,0,30
+ PRODUCTVERSION 0,3,0,30
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -68,14 +68,14 @@ BEGIN
             VALUE "Comments", "Anir Remote plugin for Girder 3.2\0"
             VALUE "CompanyName", "\0"
             VALUE "FileDescription", "Anir2Girder DLL\0"
-            VALUE "FileVersion", "0, 3, 0, 26\0"
+            VALUE "FileVersion", "0, 3, 0, 30\0"
             VALUE "InternalName", "Anir2Girder\0"
-            VALUE "LegalCopyright", "Copyright (C) 2002, by Tom Skoglund\0"
+            VALUE "LegalCopyright", "Copyright (C) 2002, 2003 by Tom Skoglund\0"
             VALUE "LegalTrademarks", "\0"
             VALUE "OriginalFilename", "Anir2Girder.DLL\0"
             VALUE "PrivateBuild", "\0"
             VALUE "ProductName", "Anir2Girder Dynamic Link Library\0"
-            VALUE "ProductVersion", "0, 3, 0, 26\0"
+            VALUE "ProductVersion", "0, 3, 0, 30\0"
             VALUE "SpecialBuild", "\0"
         END
     END
